drm/i915: Re-apply "Perform link quality check, unconditionally during long pulse"

The same patch and various dmesg output is attached to
https://bugs.freedesktop.org/show_bug.cgi?id=107446 "Monitor on 2nd DisplayPort is not initialized"

I have no idea, if this patch is correct, but it fixes my problem of the "bricked" monitor.

Jan-Marek